--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ tensorflow==2.6.0
 numpy==1.21.2
 pillow==8.3.2
 streamlit==0.89.0
+
+DATASET LINK
+=->kaggle datasets download -d vipoooool/new-plant-diseases-dataset
